stream response, switch to GridFS

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ tokio = { version = "1.26.0", features = ["full"] }
 serde = { version = "1.0.158", features = ["derive"] }
 serde_json = "1.0.94"
 mongodb = "2.4.0"
+mongodb-gridfs = "0.2.5"
 rand = "0.8.5"
 warp = "0.3.3"
 futures-util = "0.3.27"
