--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,4 +2,4 @@
 nixPkgs = ['...', 'nodejs']
 
 [phases.build]
-cmds = ['npm install --prefix frontend", "npx vite build --prefix frontend']
+cmds = ['npm install --prefix frontend", "npx vite build --prefix frontend', 'cargo build --release']
