--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['...', 'nodejs', 'python']
 
 [phases.build]
-cmds = ['npm install --prefix frontend", "npm --prefix frontend run vite build .', 'cargo build --release']
+cmds = ['npm install --prefix frontend", "npm --prefix frontend run build', 'cargo build --release']
 
 [start]
 cmd = 'target/release/kalkafox-img'
