forego the build.sh since it doesn't seem to be working

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['...', 'nodejs', 'python']
 
 [phases.build]
-cmd = './scripts/build.sh'
+cmd = ["cargo build --release", "npm --prefix frontend install", "npm --prefix frontend run build"]
 
 [start]
 cmd = 'bin/kalkafox-img'
