fix build parameter

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,5 @@
 [phases.setup]
 nixPkgs = ['...', 'nodejs', 'python']
+
+[phases.build]
+cmds = ['...', 'npm --prefix frontend install', 'npm --prefix frontend run build']
