try paths for staticAssets?

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,4 +2,7 @@
 nixPkgs = ['...', 'nodejs', 'python']
 
 [phases.build]
-cmds = ['...', 'npm --prefix frontend install', 'npm --prefix frontend run build', 'mv frontend/dist bin/frontend']
+cmds = ['...', 'npm --prefix frontend install', 'npm --prefix frontend run build']
+
+[staticAssets]
+paths = ['frontend/dist']
