i'm running blind here because the nixpacks documentation is only 3 lines for this topic lol

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,4 +5,4 @@ nixPkgs = ['...', 'nodejs', 'python3']
 cmds = ['...', 'npm --prefix frontend install', 'npm --prefix frontend run build']
 
 [start]
-onlyIncludeFiles = ['frontend/dist/**', 'bin/kalkafox-img']
+onlyIncludeFiles = ['frontend/dist/index.html', 'bin/kalkafox-img', 'frontend/dist/*.js']
